# lambda-egglog

./: README.md  dune-project
lib/: dune  egraph.ml  term.ml
test/: dune
test/old/: README.md  dune-project  index.html
test/old/lib/: action.ml  dune  egraph.ml  lexer.mll  log.ml  parser.mly
test/old/test/: add.egg  add2.egg  addbasic.egg  dune  path.egg
